# quantize-strategy

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/core/: header.rs  io.rs  mod.rs  validation.rs
src/strategies/: attention_aware.rs  l2_norm.rs  learnable.rs  mod.rs  qr_pivot.rs
src/utils/: mod.rs  permutation.rs  tensor_ops.rs
